[project]
name = "chromadb-uploadablerag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.5.0",
    "langchain-openai>=1.4.0",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.10.9",
    "streamlit>=1.60.0",
    "tavily>=1.1.0",
    "typing>=3.10.0.0",
]
